--- a/css/css/style.css
+++ b/css/css/style.css
@@ -135,11 +135,18 @@ nav .button {
 .nav__items {
     display: flex;
     align-items: center;
-    gap: 4rem;
+    /* gap: 4rem; */
 }
-
+.nav__items li{
+    height: 100%;
+    padding: 1.7em;
+}
 .nav__items li a {
     text-decoration: underline;
+}
+.nav__items li:hover {
+    background-color: #000;
+ 
 }
 .nav__items li a:hover {
   text-decoration: none;
@@ -304,6 +311,7 @@ footer {
         height: 4.5rem;
         display: flex;
         align-items: center;
+        background-color: #000066;
         box-shadow: -2rem 3rem 7rem rgba(0, 0, 0, 0.7);
         border-top: 1px solid #000;
         animation: animateDropdown 400ms 0s ease forwards;
@@ -340,14 +348,14 @@ footer {
         border-radius: 0;
         width: 100%;
         height: 100%;
-        background: #34deeb;
+        background: #000066;
         padding: 0 2rem;
         display: flex;
         align-items: center;
     }
 
     .nav__profile {
-        background: #aae0f8;
+        background: #000066;
     }
 
     .nav__profile ul {
